# ucm-tfm-mbta

./: LICENSE  README.md
processing-data-lake/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
processing-data-lake/conf/base/: catalog.yml  globals.yml  spark.yml
processing-data-lake/conf/base/catalog/: catalog.yml
processing-data-lake/conf/base/catalog/bronze/: catalog.yml
processing-data-lake/conf/base/catalog/gold/: catalog.yml
processing-data-lake/conf/base/catalog/landing/: catalog.yml
processing-data-lake/conf/base/catalog/silver/: catalog.yml
processing-data-lake/conf/base/parameters/: parameters.yml
processing-data-lake/conf/base/parameters/bronze/: bronze.yml
processing-data-lake/conf/base/parameters/gold/: gold.yml
processing-data-lake/conf/base/parameters/landing/: landing.yml
processing-data-lake/conf/base/parameters/silver/: silver.yml
processing-data-lake/notebooks/: notebook_entrypoint.ipynb
processing-data-lake/src/processing_datalake/: __init__.py  __main__.py  hooks.py  settings.py
processing-data-lake/src/processing_datalake/extras/utils/: __init__.py  scd_functions.py
processing-data-lake/src/processing_datalake/pipelines/bronze/: __init__.py  pipeline.py
processing-data-lake/src/processing_datalake/pipelines/bronze_first_load/: __init__.py  pipeline.py
processing-data-lake/src/processing_datalake/pipelines/gold/: __init__.py  pipeline.py
processing-data-lake/src/processing_datalake/pipelines/gold_first_load/: pipeline.py
processing-data-lake/src/processing_datalake/pipelines/landing/: __init__.py  pipeline.py
processing-data-lake/src/processing_datalake/pipelines/silver/: __init__.py  pipeline.py
processing-data-lake/src/processing_datalake/pipelines/silver_first_load/: pipeline.py
processing-data-lake/src/tfm_big_data/: hooks.py  settings.py
processing-data-lake/src/tfm_big_data/pipelines/bronze/: pipeline.py
processing-data-lake/src/tfm_big_data/pipelines/gold/: pipeline.py
processing-data-lake/src/tfm_big_data/pipelines/silver/: pipeline.py
(+27 files in other folders)
