[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "processing_datalake"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
processing-datalake = "processing_datalake.__main__:main"

[tool.kedro]
package_name = "processing_datalake"
project_name = "Processing Data Lake"
kedro_init_version = "0.19.4"
tools = [ "Custom Logging", "Documentation", "Kedro Viz", "Testing",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "processing_datalake.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
